Added admin pandel

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -1,4 +1,8 @@
 en:
+  new_account: "New account"
+  to_on: "On"
+  to_off: "Off"
+  admin_menu_message: "Administration panel"
   greeting_message: "Hello"
   farewell_message: "Bye"
   start_menu_message: "<i>Choose that you want</i>"
@@ -83,6 +87,7 @@ en:
   find_by_query_num: "Find by №"
   find_by_query_num_sections: "Find section by №"
   enter_the_number: "Enter the number"
+  enter_your_value: "Enter the value"
   edit: "Edit"
   editing_settings: "Editing settings"
   editted: "Editted"
@@ -182,7 +187,15 @@ en:
   help_info: "In addition to using the buttons in the menu, I can respond to text commands:\n\n1. Do you need a specific course? Write: \"Find a course \"or\" Recommend a course\" and a keyword or phrase.\n\n2 . If you have a technical question or you need to contact the curator, write \"Connect\" or \"Switch\", and then, who is needed - technical support or a tutor.\n\n3. To show the list of courses under study or already taken, write \"Show\" and then what. For example, \"Show active courses\".\n\n4. To view the profile of another student and the ability to write to him - enter the command \"/u[user id]\". For example \"/u97813\". The user ID can be found by opening your profile, via the button in the menu."
   start_time_has_not_come: "The start date has not yet arrived. Access will not open until a specified date and time."
   about_courses_page: "Here you can go to the current courses on the passage or see those that have already been completed. Click on the \"On study\", and then, in the list, go to the course with the name \"Demo course\"."
+  accounts_manager: "Accounts manager"
+  admins_manager: "Admins manager"
+  starting: "Main menu"
+  managers: "Admins"
 ru:
+  new_account: "Новый аккаунт"
+  to_on: "Включить"
+  to_off: "Отключить"
+  admin_menu_message: "Меню администратора"
   greeting_message: "Привет,"
   farewell_message: "Пока"
   start_menu_message: "<i>Что делаем дальше?</i>"
@@ -267,6 +280,7 @@ ru:
   find_by_query_num: "Найти по №"
   find_by_query_num_sections: "Найти раздел по №"
   enter_the_number: "Введите номер"
+  enter_your_value: "Введите значение"
   edit: "Изменить"
   editing_settings: "Изменение настроек"
   editted: "Изменено"
@@ -367,3 +381,7 @@ ru:
   help_info: "Помимо управления через кнопки в меню, я умею реагировать на текстовые команды:\n\n1. Нужен какой-то определенный курс? Напиши: \"Найди курс\" или \"Порекомендуй курс\" и ключевое слово, либо словосочетание.\n\n2. Если есть технический вопрос или нужно обратиться к куратору, напиши \"Соедини\" или \"Переключи\", а затем, кто нужен - техподдержка или куратор обучения.\n\n3. Чтобы показать списоку курсов на изучении или уже пройденные, напиши \"Покажи\", а затем что. Например, \"Покажи активные курсы\".\n\n4. Для просмотра профиля другого ученика и возможности ему написать - введи команду \"/u[id пользователя]\". Например \"/u97813\". ID пользователя можно узнать открыв свой профиль, через кнопку в меню."
   start_time_has_not_come: "Доступ не откроется до указанной даты и времени начала обучения."
   about_courses_page: "Здесь можно перейти к текущим курсам на прохождении или посмотреть те, которые уже завершились. Нажми на кнопку \"На изучении\", а затем, в списке, перейди в курс с названием \"Демонстрационный курс\"."
+  accounts_manager: "Управление аккаунтами"
+  admins_manager: "Управление админами"
+  starting: "Главное меню"
+  managers: "Админы"
