Added taking data delay

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -181,7 +181,7 @@ en:
   enter_by_auth_data: "Log in by entering your username and password yourself or reset password."
   meet_with_bot: "Let's get acquainted!"
   about_bot_demo_mode: "My name is <a href='https://storage.yandexcloud.net/tbpublic/other/2868-300x300.png'>Teachbaser</a> - I am a Telegram bot, your assistant in teaching on the Teachbase platform.\n\nTake courses, study the library of available documents - all this is right here in Telegram. With me you will not miss a new assigned course - I will send a notification. , I can perform many other useful functions. Learn more: /help.\n\nLet's start acquaintance? Select the item of interest below:"
-  timeout: "Timeout of waiting for a response from the user after 30 seconds."
+  timeout: "Response timed out."
   reset_password: "Reset password"
   password_changed: "Password changed"
   help_info: "In addition to using the buttons in the menu, I can respond to text commands:\n\n1. Do you need a specific course? Write: \"Find a course \"or\" Recommend a course\" and a keyword or phrase.\n\n2 . If you have a technical question or you need to contact the curator, write \"Connect\" or \"Switch\", and then, who is needed - technical support or a tutor.\n\n3. To show the list of courses under study or already taken, write \"Show\" and then what. For example, \"Show active courses\".\n\n4. To view the profile of another student and the ability to write to him - enter the command \"/u[user id]\". For example \"/u97813\". The user ID can be found by opening your profile, via the button in the menu."
@@ -375,7 +375,7 @@ ru:
   meet_with_bot: "Давайте познакомимся!"
   info_about_setted_password: "Похоже, что вы уже были зарегистрированы в системе ранее с таким номером телефона."
   about_bot_demo_mode: "Меня зовут <a href='https://storage.yandexcloud.net/tbpublic/other/2868-300x300.png'>Teachbaser</a> - я Telegram-бот, твой помощник в обучении на платформе Teachbase.\n\nПроходи курсы, изучай библиотеку доступных документов - все это прямо здесь, в Telegram. Со мной ты не пропустишь новый назначенный курс - я пришлю уведомление. Кроме этого, умею выполнять много других полезных функций. Узнать подробнее: /help.\n\nНачнем знакомство? Выбирай ниже интересующий пункт в меню."
-  timeout: "Таймаут времени ожидания ответа от пользователя спустя 30 секунд."
+  timeout: "Время ожидания ответа истекло."
   reset_password: "Сбросить пароль"
   password_changed: "Пароль изменен"
   help_info: "Помимо управления через кнопки в меню, я умею реагировать на текстовые команды:\n\n1. Нужен какой-то определенный курс? Напиши: \"Найди курс\" или \"Порекомендуй курс\" и ключевое слово, либо словосочетание.\n\n2. Если есть технический вопрос или нужно обратиться к куратору, напиши \"Соедини\" или \"Переключи\", а затем, кто нужен - техподдержка или куратор обучения.\n\n3. Чтобы показать списоку курсов на изучении или уже пройденные, напиши \"Покажи\", а затем что. Например, \"Покажи активные курсы\".\n\n4. Для просмотра профиля другого ученика и возможности ему написать - введи команду \"/u[id пользователя]\". Например \"/u97813\". ID пользователя можно узнать открыв свой профиль, через кнопку в меню."
