--- a/config/locales.yml
+++ b/config/locales.yml
@@ -308,7 +308,7 @@ ru:
   send: "Отправить"
   answer: "Ответ"
   task: "Задание"
-  attachments: "Вложения"
+  attachments: "Дополнительные файлы"
   enter_your_answer: "Отправьте боту то, что хотите. Это может быть всё, что угодно – текст, фото, видео, аудио, документ (не более 5 МБ)"
   confirm_action: "Подтвердите действие"
   accept: "Подтвердить"
