--- a/config/locales.yml
+++ b/config/locales.yml
@@ -14,10 +14,11 @@ en:
   hide_menu: "[Hide menu]"
   add_user_login: "Enter <b>LOGIN</b> (email/phone)"
   add_user_password: "Enter <b>PASSWORD</b>"
+  add_auth_code: "Enter <b>THE CODE</b> that was sent in the message to your login"
   new_password_condition: "The new password must be at least 6 characters long"
   not_correct_email: "This is not email."
   error: "Error"
-  auth_failed: "Not correct email or password."
+  auth_failed: "Invalid login details."
   try_again: "Try again"
   greetings: "Welcome"
   auth_success: "Authorization succeed"
@@ -191,6 +192,7 @@ en:
   admins_manager: "Admins manager"
   starting: "Main menu"
   managers: "Admins"
+  auth_code: "Auth code"
 ru:
   new_account: "Новый аккаунт"
   to_on: "Включить"
@@ -207,10 +209,11 @@ ru:
   hide_menu: "[Скрыть меню]"
   add_user_login: "Введите <b>ЛОГИН</b> (email/номер телефона)"
   add_user_password: "Введите <b>ПАРОЛЬ</b>"
+  add_auth_code: "Введите <b>КОД</b>, который был отправлен в сообщении на ваш логин"
   new_password_condition: "Новый пароль должен содержать не менее 6 символов"
   not_correct_email: "Это не email."
   error: "Ошибка"
-  auth_failed: "Неправильный логин или пароль."
+  auth_failed: "Некорректные данных для входа."
   try_again: "Попробуйте еще раз"
   greetings: "Добро пожаловать"
   auth_success: "Вход выполнен успешно"
@@ -385,3 +388,4 @@ ru:
   admins_manager: "Управление админами"
   starting: "Главное меню"
   managers: "Админы"
+  auth_code: "Код авторизации"
